# NucleiSegmentation

./: .gitignore  README.md  gen_fake_images.sh  image_subset.py  iterate.sh  rds_subset.R  run.sh  saw_5.sh  temp.sh  temp2.sh
ST_BarcodeMap/: run.sh
algos/cellpose/: convert.py  run.sh
algos/deepcell/: convert.py  run.sh
analysis/: crop_gem.py
analysis/image_merge/: image_merge.py
analysis/oz_sc_conf/: Plotting.ipynb  bar_plots.py
benchmarking/: extract_stats.py  record_cellpose.sh  record_deepcell_watershed.sh
docker/: Dockerfile  aliases  exec.sh  install.sh  iterate.sh  r_pkgs.R
genome_alignment/: README.md  count.sh  exons.sh  gef2gem.sh  get_introns.sh  index_reference_genome.sh  register.sh  saw_5.sh  stereoRun_singleLane_v4.1.0.sh
image_alignment/: align.sh
image_merge/: image_merge.py
rscripts/: accurate_plot.R  count_feature_spatial_plotting.R  dim_reduction.R  gem2rds.R  gem2rds.R.ORIG  gem2rds.Rmd  gem2rds_cli.R  spatial_plotting.R  umap_clustering.R
ssDNA_image_accuracy/: accuracy.py
ssDNA_img_generation/: erode.py  filter.py  prob_of_dup_colours.py
subsetting/nuclei_segregation_cpp/src/: CMakeLists.txt  Makefile  cmake_install.cmake  fg_bg.cpp  image.cpp  nuclei_segregation.cpp  params.c  thresholds.cpp  watershed.cpp
subsetting/nuclei_segregation_cpp/src/binning/: bin_genes.cpp  io.cpp
subsetting/nuclei_segregation_cpp/src/watershed/: fg_bg.cpp  watershed.cpp
usage/: extract_stats.py  record.sh  record_cellpose.sh  record_deepcell_watershed.sh  record_multiple.sh  run.sh  run_deepcell.sh  run_watershed.sh  temp.py
(+120 files in other folders)
